# template-package

./: README.md  cookiecutter.json  requirements.txt
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml  pytest.ini
