[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = "" # top packages
known_local_folder = "tests,{{ cookiecutter.project_name }}"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"

[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["Developers <wilsontads@gmail.com>"]
repository = "{{ cookiecutter.repo_name }}"
keywords = [ "yaeeh", "tapioca" ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
]
exclude = [ "docs", "tests*"]
include = ["*.rst", "*.txt", "*.py", "*.png", "*.dot", "Makefile"]